--- a/socio-web/src/main/webapp/index.html
+++ b/socio-web/src/main/webapp/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Persona</title>
+<title>Socio</title>
 </head>
 <body>
 	<h1>
-		Welcome to <strong>PERSONA</strong>
+		Welcome to <strong>SOCIO</strong>
 	</h1>
 </body>
 </html>
